--- a/learning-javascript/JavaScript30-master/07 - Array Cardio Day 2/index-START.html
+++ b/learning-javascript/JavaScript30-master/07 - Array Cardio Day 2/index-START.html
@@ -26,16 +26,50 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    // const isAdult = people.some(function(person){
+    //     const currentYear = (new Date().getFullYear());
+    //     if(currentYear-person.year >= 19) {
+    //       return true;
+    //     }
+    // })
+
+    // console.log(isAdult);
     // Array.prototype.every() // is everyone 19 or older?
+
+    // const isAdult = people.every(function(person) {
+    //   const currentYear = (new Date().getFullYear());
+    //   if(currentYear-person.year >= 19) {
+    //     return true;
+    //   }
+    // })
+
+    // console.log(isAdult)
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const myComment = comments.find(function(comment){
+      if(comment.id === 823423) {
+        return true;
+      }
+    })
+
+    console.log(myComment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index = comments.findIndex(function(comment) {
+        return comment.id === 823423;
+    })
+  comments.splice(index,1);
 
+  const newComments = [
+    ...comments.slice(0,index),
+    ...comments.slice(index+1)
+  ]
+  console.log(comments);
+  console.log(newComments);
   </script>
 </body>
 </html>
