--- a/learning-javascript/JavaScript30-master/05 - Flex Panel Gallery/index-START.html
+++ b/learning-javascript/JavaScript30-master/05 - Flex Panel Gallery/index-START.html
@@ -26,6 +26,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -43,19 +44,27 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex-direction: column;
+      display: flex;
+      flex: 5;
+      justify-content: center;
+      align-items: center;
     }
 
-    .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-    .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
+    .panel1 { background-image:url(https://unsplash.com/photos/W63Ryb5f1Jw); }
+    .panel2 { background-image:url(https://unsplash.com/photos/raYS2lbD3CA); }
     .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+    .panel4 { background-image:url(https://unsplash.com/photos/pduutGbL2-M); }
+    .panel5 { background-image:url(https://unsplash.com/photos/_SXXl87c2hE); }
 
     /* Flex Children */
     .panel > * {
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      border: 1px solid red;
+      flex: 1 0 auto;
+      display: flex;
     }
 
     .panel p {
