--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project1</title>
-  <!-- <link rel="stylesheet" href="./styleA.css"> -->
-  <link rel="stylesheet" href="./styleB.css">
-  <link rel="stylesheet" href="./styleC.css">
+  <link rel="stylesheet" href="./styleA.css">
+  <!-- <link rel="stylesheet" href="./styleB.css">
+  <link rel="stylesheet" href="./styleC.css"> -->
 </head>
 <body>
   <div class="boxs">
